--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+APScheduler==3.11.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+EWMHlib==0.2
 idna==3.10
 psycopg2-binary==2.9.10
-requests==2.32.3
-urllib3==2.3.0
+PyMonCtl==0.92
 python-decouple==3.8
+python-xlib==0.33
+PyWinBox==0.7
+PyWinCtl==0.4.1
+requests==2.32.3
+six==1.17.0
+typing_extensions==4.12.2
+tzlocal==5.2
+urllib3==2.3.0
