--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,24 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 EWMHlib==0.2
 idna==3.10
+MouseInfo==0.1.3
 psycopg2-binary==2.9.10
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
 PyMonCtl==0.92
+PyMsgBox==1.0.9
+pyperclip==1.9.0
+PyRect==0.2.0
+PyScreeze==1.0.1
 python-decouple==3.8
 python-xlib==0.33
+python3-xlib==0.15
+pytweening==1.2.0
 PyWinBox==0.7
 PyWinCtl==0.4.1
 requests==2.32.3
 six==1.17.0
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzlocal==5.2
 urllib3==2.3.0
